# SmartCarDashboard

./: .qmlls.ini  CMakeLists.txt  Info.plist  Main.qml  car_sim.py  main.cpp  musicplayer.cpp  musicplayer.h  radiusimage.cpp  radiusimage.h  rsc.qrc
qml/SoundManagers/: SoundManager.qml  qmldir
qml/components/: BottomBar.qml  CameraCard.qml  CarInfoCard.qml  CarRunningCard.qml  DashboardCard.qml  GearButton.qml  MapCard.qml  MusicButton.qml  MusicCard.qml  StatItem.qml  TopBar.qml  WeatherCard.qml
qml/managers/: SoundManager.qml  qmldir
qml/themes/: DarkTheme.qml  LightTheme.qml  Theme.qml  qmldir
src/: CarDataReceiver.cpp  CarDataReceiver.h  CarInfoModel.cpp  CarInfoModel.h
